# Telegram-Portuguese-Bot

./: .env.example  .gitignore  Cargo.toml  README.md  demo_user_config.rs
.github/workflows/: rust.yml
cache/: translations.db
src/: cache_repository.rs  constants.rs  db.rs  fetch_translations.rs  lib.rs  main.rs  migration.rs  user_repository.rs
src/entities/: cached_articles.rs  mod.rs  users.rs
src/migration/: m20251011_000001_create_users_table.rs  m20251011_000002_create_cached_articles_table.rs
systemd_config/: pt_dict_bot.service
tests/: fetch_translations_tests.rs  flip_command_tests.rs  integration_tests.rs  migration_tests.rs  user_repository_tests.rs
